feat: Deploy kafka with latest bitnami and configs